...
        app:layout_constraintTop_toBottomOf="@id/textView4"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fabCustomSize="50dp"
        android:layout_gravity="bottom|right"
        android:backgroundTint="@color/red1"
        android:layout_margin="19dp"
...
        app:srcCompat="@drawable/ic_baseline_chat_24" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Rocord"
        android:textColor="@color/red1"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/recview"
...
