<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#f2dfe0"
    tools:context=".MainActivity">





    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Update \n value"
        android:textAlignment="center"
        android:textColor="@color/red1"
        android:layout_marginTop="15dp"
        android:textSize="30sp"
        android:textStyle="bold" />



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tile_nama"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="100dp"
        app:boxStrokeColor="@color/red1"
        android:layout_marginRight="50dp">

        <EditText
            android:id="@+id/upSYs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Systolic"
            android:inputType="number"
            android:textColorHint="@color/red1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:id="@+id/tile_nama2"
        app:boxStrokeColor="#89729E"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

        <EditText
            android:id="@+id/updias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Dystolic"
            android:inputType="number"
            android:textColorHint="@color/red1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:id="@+id/tile_nama3"
        app:boxStrokeColor="#89729E"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

        <EditText
            android:id="@+id/uphrtRate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Pulse Rate"
            android:inputType="number"
            android:textColorHint="@color/red1" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:id="@+id/tile_nama4"
        app:boxStrokeColor="#89729E"
        app:boxStrokeWidth="2dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

        <EditText
            android:id="@+id/upcomment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="comment"
            android:inputType="text"
            android:textColorHint="@color/red1" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sbmt_up"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/buttonshape"

        android:text="EDIT"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>