...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/commnt">
            <Button
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:id="@+id/edit"
                android:paddingLeft="24dp"
                android:text="Edit"
                android:background="@drawable/buttonshape"
                android:paddingRight="24dp"></Button>
            <Button
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:id="@+id/deleteList"
                android:text="Delete"
                android:paddingLeft="24dp"
                android:background="@drawable/buttonshape"
                android:paddingRight="24dp"></Button>

        </LinearLayout>
...
